--- a/src/App.css
+++ b/src/App.css
@@ -153,3 +153,16 @@ nav ul li + li + li {
   margin: 1%;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
+
+.box {
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
+}
+
+.box:nth-of-type(even) {
+  transform: translateX(-400%);
+}
+
+.box.show {
+  transform: translateX(0);
+}
