--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,44 @@ nav ul li + li + li {
 .box.show {
   transform: translateX(0);
 }
+
+.search {
+  position: relative;
+  height: 50px;
+}
+
+.search .input {
+  background-color: #fff;
+  border: 0;
+  font-size: 18px;
+  padding: 15px;
+  height: 50px;
+  width: 50px;
+  transition: width 0.3s ease;
+}
+
+.search-btn {
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  height: 50px;
+  width: 50px;
+  transition: transform 0.3s ease;
+}
+
+.search-btn:focus,
+.search-btn:focus {
+  outline: none;
+}
+
+.search.active .input {
+  width: 200px;
+}
+
+.search.active .search-btn {
+  transform: translateX(210px);
+}
